# antigravity-mvp

./: .gitignore  README.md
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  creem_client.py  deps.py  deps_auth.py  main.py  repo.py
apps/api/app/routes/: checkout.py  me.py  webhooks.py
apps/api/app/utils/: crypto.py
apps/api/tests/: conftest.py  test_auth.py  test_checkout.py  test_webhook.py
apps/web/: README.md  package-lock.json  package.json
apps/web/src/: App.tsx  index.css
apps/web/src/components/: ProtectedRoute.tsx
apps/web/src/lib/: api.ts  navigation.ts
apps/web/src/pages/: LoginPage.tsx  ProductsPage.tsx  SuccessPage.tsx
apps/web/src/test/: flows.test.tsx
supabase/: schema.sql
